# Landing

./: README.md
dji_gimbal/: CMakeLists.txt  gimbal  package.xml
dji_gimbal/config/: gimbal_control.yaml  gimbal_dji_control.yaml  platform_control.yaml  说明
dji_gimbal/include/dji_gimbal/: goal_broadcaster.h  navigation_server.h
dji_gimbal/launch/: display.launch  display_dji_gimbal.launch  gimbal_controll.launch  gimbal_dji_controll.launch  outdoor_flight_gazebo.launch  platform.launch  spawn_quadrotor.launch
dji_gimbal/meshes/: back.dae  camera.dae  leftsupport.dae  rightsupport.dae  top.dae
dji_gimbal/rviz/: indoor_test_hector.rviz  urdf.rviz  urdf_dji.rviz
dji_gimbal/src/: goal_broadcaster.cpp  navigation_client.cpp  navigation_server.cpp  stabilization.py  stabilization_platform.py
dji_gimbal/urdf/: arm_gimbal.xacro  camera.xacro  camera_on_dji_gimbal.xacro  camera_on_dji_gimbal_fixed.xacro  camera_on_gimbal.xacro  dji_gimbal.xacro  gimbal.xacro  platform.xacro  quadrotor_hokuyo_utm30lx.gazebo.xacro  quadrotor_hokuyo_utm30lx.urdf.xacro
gazebo/: component_snippets.xacro  iris.xacro  kinect_dji_gimbal.xacro  kinect_on_dji_gimbal_fixed.xacro  no_arm_iris_base.xacro  world
launch/: car_tracking.launch  px4_car.launch
px4_control/: CMakeLists.txt  package.xml
px4_control/include/: FuzzyPID.h  auto_2d_nav.h  offboard_control.h  px4_control_cfg.h  tracking_quadrotor.h
px4_control/launch/: landing.launch  tracking.launch  tracking_car.launch
px4_control/src/: ar_pose.cpp  auto_2d_nav.cpp  landing_quadrotor.cpp  picking_gazebo_pos.cpp  position_to_mavros.cpp  px4pos_gazebo.cpp  ros_nav_quadrotor.cpp  set_mode.cpp  tracking_quadrotor.cpp  tracking_quadrotor_pid.cpp  tracking_quadrotor_yolo.cpp  说明
